# mysite

./: Home.py  details.py  modelling.py  pyproject.toml  requirements.txt  subsections.py  visualisations.py
data/: mastocytosis_patient_survey.csv
pages/: project_1.py
